[package]
name = "intel-crawl-app"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.94"

[dependencies]
async-nats = "0.47.0"
aws-config = { version = "1.8.16", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.133.0", default-features = false, features = ["default-https-client", "http-1x", "rt-tokio", "sigv4a"] }
aws-types = "1.3.10"
bytes = "1.10.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tokio = { version = "1.52.1", features = ["fs", "macros", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
